# excel-to-json

./: .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_NOTES.md  README.md  TASKS.md  clippy.toml
.agents/instructions/: code-style-rust-extra.instructions.md  code-style-rust.instructions.md  git-status-reminder.instructions.md  project-directory.instructions.md  tech-stack.instructions.md  test-instructions.instructions.md  user-preferences.instructions.md  writing-design-docs.instructions.md
.claude/: settings.json
.claude/hooks/: git-health-check.sh
.claude/memory/: MEMORY.md  project-init-complete.md
.github/workflows/: ci.yml
changelog/: CHANGELOG_20260627.md  CHANGELOG_20260629.md
docs/: DEV_NOTES.md  TASKS.md
docs/design/: 00.project-initiation.md  01.user-stories.md  02.requirements.md  03.system-design.md  04.implementation-plan.md
scripts/: deploy.sh  setup-rust.sh
src/: cli.rs  config.rs  converter.rs  error.rs  lib.rs  main.rs  mapping.rs  output.rs  walker.rs
tests/: cli.rs
tests/common/: mod.rs
tests/fixtures/: .gitkeep  multi-sheet.xlsx  sample.xlsx
