[package]
name = "excel-to-json"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ux864e"]
description = "A CLI tool to convert Excel files (.xlsx/.csv) to JSON with config-driven mapping"
license = "MIT"
repository = "https://github.com/ux864e/excel-to-json"
readme = "README.md"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization (config + JSON output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Excel parsing
calamine = "0.26"

# Logging / diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XDG config directories
directories = "6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
